5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1594_1801.log
== TEST (2019-03-31 13:26:07) 
-- CODE:
objeto=input("Nome do objeto: ")
numero=int("Repeticoes do feitico: ")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    numero=int("Repeticoes do feitico: ")
ValueError: invalid literal for int() with base 10: 'Repeticoes do feitico: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:27:18) 
-- CODE:
objeto=input("Nome do objeto: ")
numero=int(input("Repeticoes do feitico: ")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:28:02) 
-- CODE:
objeto=input("Nome do objeto: ")
numero=int(input("Repeticoes do feitico: ")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:33:03) 
-- CODE:
objeto=input("Nome do objeto: ")
numero=input(int("Repeticoes do feitico: ")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:34:15) 
-- CODE:
objeto=input("Nome do objeto: ")
numero=int(input("Repeticoes do feitico: ")


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:20:13) 
-- CODE:
objeto=str(input("Nome do objeto: ")
numero=int(input("Repeticoes do feitico: ")
			  
			  x="Abra"+objeto
			  z=x*numero
	print(z)


-- ERROR:
File "XXXX", line 2
    numero=int(input()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:21:21) 
-- CODE:
objeto=str(input("Nome do objeto: ")
numero=int(input("Repeticoes do feitico: ")
			  
			  x="Abra"+objeto
			  z=x*numero
	print(z)


-- ERROR:
File "XXXX", line 2
    numero=int(input()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:51:25) 
-- CODE:
a=str(input("Nome do objeto: ")
b=int(input("Repeticoes do feitico: ")
			  
			  x="Abra"+a
			  z=x*b
	print(z)


-- ERROR:
File "XXXX", line 2
    b=int(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:51:38) 
-- CODE:
a=str(input("Nome do objeto: "))
b=int(input("Repeticoes do feitico: "))
			  
			  x="Abra"+a
			  z=x*b
	print(z)


-- ERROR:
File "XXXX", line 4
    x="Abra"+a
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:01) 
-- CODE:
a=str(input("Nome do objeto: "))
b=int(input("Repeticoes do feitico: "))
			  
			  x= " Abra " + a
			  z=x*b
	print(z)


-- ERROR:
File "XXXX", line 4
    x= " Abra " + a
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:12) 
-- CODE:
a=str(input("Nome do objeto: "))
b=int(input("Repeticoes do feitico: "))
			  
			  x= " Abra " + a
			  z=x*b
	print(z)


-- ERROR:
File "XXXX", line 4
    x= " Abra " + a
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:37) 
-- CODE:
a=(input("Nome do objeto: "))
b=int(input("Repeticoes do feitico: "))
			  
x= " Abra " + a
z=x*b
print(z)


-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:52:39) 
-- CODE:
a=(input("Nome do objeto: "))
b=int(input("Repeticoes do feitico: "))
			  
x= " Abra " + a
z=x*b
print(z)


-- EXECUTION TIME:
0.167526
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
